use correct letter-spacing for items in navbar

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -97,7 +97,7 @@
   display: block;
   padding: 0.75rem 1.25rem;
   text-transform: uppercase;
-  letter-spacing: -0.425px;
+  letter-spacing: -0.025em;
   position: relative;
 }
 
@@ -294,7 +294,7 @@ a.navbar-item.has-dropdown::after,
   font-weight: var(--weight-bold);
   font-size: 1.125rem;
   height: 3.25rem;
-  width: 9.75rem;
+  width: 9.75rem; /* 1.875rem padding on sides */
   display: flex;
   align-items: center;
   justify-content: center;
